--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=
-    , initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Croissant</title>
+    <link href="src/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1>Croissants and Pastries in Singapore</h1>
+    <h3>🥐Tiong Bahru Bakery</h3>
+    <h4>🙌Best neigbourhood spots: Tiong Bahru and Orchard</h4>
+    <img
+      src="images/Tiong-Bahru-Bakery.jpg"
+      alt="Pastries from Tiong Bahru Bakery"
+      class="tiongbahru"
+    />
+    <p>
+      In Singapore the Croissants and Pastries from Tiong Bahru Bakery <br />
+      are very popular. It is the best French Bakery in Singapore.
+    </p>
+
+    <a href="/contact.html">Contact</a>
+    <a href="/photo.html">Photos</a>
+  </body>
 </html>
