--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Croissants in Singapore</title>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -29,7 +29,8 @@
     />
     <p>
       In Singapore the Croissants and Pastries from Tiong Bahru Bakery <br />
-      are very popular. It is the best French Bakery in Singapore.
+      are very popular. It is the best French Bakery in Singapore. <br />Have a
+      yummy time!
     </p>
 
     <a href="/contact.html">Contact</a>
