--- a/photo.html
+++ b/photo.html
@@ -24,13 +24,25 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-4 mb-2">
-          <img src="/images/tbb1.jpg" class="img-fluid p-2 rounded shadow" />
+          <img
+            src="/images/tbb1.jpg"
+            class="img-fluid p-2 rounded shadow"
+            alt="Location: Tiong Bahru"
+          />
         </div>
         <div class="col-md-4 mb-2">
-          <img src="/images/tbb2.jpg" class="img-fluid p-2 rounded shadow" />
+          <img
+            src="/images/tbb2.jpg"
+            class="img-fluid p-2 rounded shadow"
+            alt="Pastries in the shop"
+          />
         </div>
         <div class="col-md-4 mb-2">
-          <img src="/images/tbb3.jpg" class="img-fluid p-2 rounded shadow" />
+          <img
+            src="/images/tbb3.jpg"
+            class="img-fluid p-2 rounded shadow"
+            alt="Merchandise Tiong Bahru Bakery Tote Bag"
+          />
         </div>
       </div>
     </div>
