Add some SEO tags

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <meta name="description" content="Website Tiong Bahru Bakery, mailto of Valerie" />
+    <title>Contact us - croissants.sg</title>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
  <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap"
@@ -17,7 +18,7 @@
 
     <h3 class="contact-info">For information about the cafe</h3>
     <h4>Tiong Bahru Bakery, Singapore</4>
-    <p> For menu and locations, please visit the <a href="www.tiongbahrubakery.com" target="blank">website</a></p>
+    <p> For menu and locations, please visit the <a href="www.tiongbahrubakery.com" target="blank">website of the Tiong Bahru Bakery.</a></p>
     
     <br />
     <br />
