--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Croissants in Singapore</title>
+    <meta
+      name="description"
+      content="You can find croissants and pastries in Singapore at different (French) bakeries. Tiong Bahru Bakery is the best French bakery in Singapore."
+    />
+    <title>Croissants in Singapore - croissants.sg</title>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -24,7 +28,7 @@
     <h4>🙌Best neigbourhood spots: Tiong Bahru and Orchard</h4>
     <img
       src="images/Tiong-Bahru-Bakery.jpg"
-      alt="Pastries from Tiong Bahru Bakery"
+      alt="Croissants and Pastries from Tiong Bahru Bakery"
       class="tiongbahru"
     />
     <p>
@@ -33,7 +37,7 @@
       yummy time!
     </p>
 
-    <a href="/contact.html">Contact</a>
-    <a href="/photo.html">Photos</a>
+    <a href="/contact.html">Contact us</a>
+    <a href="/photo.html">Photo</a>
   </body>
 </html>
