--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Photo</title>
+    <meta name="description" content=photos of Tiong Bahru Bakery: location,
+    pastries and merchandise. />
+    <title>Photo gallery Tiong Bahru Bakery - croissants.sg</title>
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -27,14 +29,14 @@
           <img
             src="/images/tbb1.jpg"
             class="img-fluid p-2 rounded shadow"
-            alt="Location: Tiong Bahru"
+            alt="Location: neighbourhood Tiong Bahru"
           />
         </div>
         <div class="col-md-4 mb-2">
           <img
             src="/images/tbb2.jpg"
             class="img-fluid p-2 rounded shadow"
-            alt="Pastries in the shop"
+            alt="Pastries in the Tiong Bahru Bakery"
           />
         </div>
         <div class="col-md-4 mb-2">
@@ -48,6 +50,6 @@
     </div>
 
     <a href="/">Homepage</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/contact.html">Contact us</a>
   </body>
 </html>
