update the website

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <h3 class="contact-info">For information about the cafe</h3>
     <h4>Tiong Bahru Bakery, Singapore</4>
-    <p> For menu and locations, please visit the <a href="www.tiongbahrubakery.com" target="blank">website of the Tiong Bahru Bakery.</a></p>
+    <p> For menu and locations, please visit the <a href="www.tiongbahrubakery.com" target="blank">website </a> of the Tiong Bahru Bakery.</p>
     
     <br />
     <br />
